cambie nombre a index

--- a/views/login.html
+++ b/views/login.html
@@ -8,7 +8,7 @@
     </head>
     <body class="background">
         <a>
-            <a href="/home.html">
+            <a href="/index.html">
                         <img src= "/img/your-logo.png" width="250" height="55" alt="Logo-Yo-Te-Mudo"> </img>
         </a>
             
