--- a/views/producto.html
+++ b/views/producto.html
@@ -12,7 +12,7 @@
 <body>
   <header class="headerMain">
     <div class="logo">
-      <a href="/home.html">
+      <a href="/index.html">
       <img id= "your" width="250" height="55" src= '/img/your-logo.png'alt= 'Imagen de logo'></img>
     </a>
   </div>
@@ -83,7 +83,7 @@
     </div>
     <div class="cont-button">
       <div class="carrito-tu-pack">
-        <a href="/home.html" class="botonPack">
+        <a href="/index.html" class="botonPack">
           <button class="carrito-pack">Volver
             <span class="icon"></span>
           </button>
