arregle todos los links

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -15,7 +15,7 @@
     <header>
         <div class="carritoContenedor01">
             <div class="logo">
-                <a href="/index.html">
+                <a href="/">
                 <img id= "your" width="250" height="55" src= '/img/your-logo.png'alt= 'Imagen de logo'></img>
             </a>
             </div>
@@ -64,7 +64,7 @@
                 </button>
 
                 <button class="carrito-volver">
-                    <a href="/index.html">
+                    <a href="/">
                     VOLVER
                     <span class="icon"><img width="25" height="25" src='/img/arriba.png'
                             alt='Imagen de flecha hacia arriba'></img></span></a>
