--- a/views/login.html
+++ b/views/login.html
@@ -8,7 +8,7 @@
     </head>
     <body class="background">
         <a>
-            <a href="/index.html">
+            <a href="/">
                         <img src= "/img/your-logo.png" width="250" height="55" alt="Logo-Yo-Te-Mudo"> </img>
         </a>
             
@@ -42,7 +42,7 @@
                         <br>
                         <div class="otros-accesos">
                             <a href="#">Olvide mi contraseña</a>  |  
-                            <a href="#">Crear cuenta</a>
+                            <a href="/registro.html">Crear cuenta</a>
                         </div>
                     </div>
                 </form>
