--- a/views/registro.html
+++ b/views/registro.html
@@ -18,7 +18,7 @@
     
     <body>
         <header>
-            <div class="logoyotemudo"><a href="/index.html">
+            <div class="logoyotemudo"><a href="/">
                 <img id= "your" width="250" height="55" src= '/img/your-logo.png'alt= 'Imagen de logo'></img>
             </a>
             </div>
