--- a/public/css/carritoStyles.css
+++ b/public/css/carritoStyles.css
@@ -5,7 +5,7 @@
 body {
     font-family: Montserrat-Light;
 
-    background: url(/fuentes/cajas.jpg);
+    background: url(/img/cajas.jpg);
     background-repeat: no-repeat;
     background-size: 100vw;
     max-width: 100vw;
