--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <!-- <YoTeMudo>Home</YoTeMudo>esto es lo que se ve en la pestaña del navegador -->
-    <link rel="stylesheet" href="/css/indexNormalize.css">
-    <link rel="stylesheet" href="/css/fuentes.css">
-    <link rel="stylesheet" href="/css/indexStyles.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/fuentes">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>  
     <header class=contenedor01>
