--- a/public/css/registroStyles.css
+++ b/public/css/registroStyles.css
@@ -50,8 +50,8 @@ body {
     padding: 1em;
 }
 .formulario_de_info {
-    background: #3C362A;
-    /* background: #88694D; */
+    background: #857d6f;
+ 
 }
 .formulario_de_info h4,
 .formulario_de_info ul,
