--- a/views/index.html
+++ b/views/index.html
@@ -62,6 +62,7 @@
             </div>
         </div>
     </main>
+    <div class="divFooter">
     <footer class="footer">
         <div class="redesSocialesFooter">          
           <div class ="rrss"><img src="/img/facebook.png" class="logoFacebook"/></div>
@@ -69,5 +70,6 @@
           <div class="rrss"><img src="/img/linkedin.png" class="logoFacebook"/></div>  
         </div>  
       </footer>
+    </div> 
 </body>
 </html>
