--- a/public/css/loginStyles.css
+++ b/public/css/loginStyles.css
@@ -7,11 +7,72 @@ body {
     font-family: Montserrat-Light;
     src: url(/public/css/fuentes/Montserrat-Light.ttf) format('truetype');
 }
+/* HEADER */
+h2{
+    text-align: center;
+}
+.contenedor01{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-content: space-around;
+    gap: 25px;
+    margin: 15px 0;
+    padding: 0 40px 40px 40px;
+}
+.presentacion{
+    display:flex;
+}
+
+.logo{
+    margin-left: 0;
+}
+.botones{
+    align-content: center;
+}
+.sub-boton{
+    position:relative;
+    padding:1em 1.5em;
+    border:none;
+    background-color:transparent;
+    cursor:pointer;
+    outline:0;
+    font-size:18px;
+    margin: .5em .8em;
+    font-weight: 600;
+}
+
+.sub-boton:after,
+.sub-boton:before{
+    content:"";
+    display:block;
+    position:absolute;
+    top:100%;
+    left:0;
+    width:100%;
+    height:2px;
+    background-color:#16a085;
+    transition:all .3s ease;
+    transform:scale(0.85)
+}
+.sub-boton:hover:before{
+    top:0;
+    transform:scale(1)
+}
+.sub-boton:hover:after{
+    transform:scale(1)
+}
+
+.telefono{
+   color: transparent;
+   align-self:center;
+}
+
+/* TERMINA EL HEADER */
 
 .background{
-    /* background-color: #29d1a7; */
-    /* background-color: #f2f2f2; */
-    background:linear-gradient(to top,#88694D,transparent);
+     background: url(../img/imagen-home.jpeg);   
+     font-family: quicksand, sans-serif; 
 }
 
 .centrado {
@@ -21,7 +82,6 @@ body {
     align-items: center;
     position: relative;
     top: 7vh;
-    /* background: lightgrey; */
     background: #BFAA8F;
     margin-top: 1rem;
     margin-right: 25vw;
@@ -29,7 +89,9 @@ body {
     margin-bottom: 0px;
     padding: 15px;
     border-radius: 5px; 
-   
+    box-shadow: 0 0 20px 0 rgb(255 255 255 / 30%);
+    background: rgba(0,0,0,.4);
+    padding: 1em; 
 }
 
 .icono_login{
@@ -52,6 +114,7 @@ body {
 }
 .carrito-volver a{
     text-decoration: none;
+    color:rgba(0, 0, 0, 0.9)
 }
 .carrito-volver{
     position:relative;
@@ -63,6 +126,7 @@ body {
     font-size:18px;
     margin:1em .8em;
     font-weight: 600;
+
 }
 .carrito-volver:after,
 .carrito-volver:before{
@@ -87,10 +151,12 @@ body {
 
 .otros-accesos{
     align-self: auto;
-    color:rgba(155, 5, 224, 1) 
+    color: white;
+    
 }
 .otros-accesos a{
     text-decoration: none;
+    color:white;
 }
 .footer{
     margin-top: 20px;
@@ -108,6 +174,36 @@ body {
     display: flex;
   }
 
+/* new footer */
+.mainFooter{
+  display: grid;
+  margin: auto;
+  grid-template-columns: 48% 30% 20%;
+  grid-template-rows: 15vh;
+  padding-bottom: 20px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.9);
+  color:seashell;
+}
+.mainFooter img{
+  width: 3vw;
+  height: 3vw;
+}
+.sectionOneFooter{
+  margin-left: -100px;
+}
+.sectionTwoFooter{
+
+  display: flex;
+}
+.sectionThreeFooter{
+  justify-self: center;
+  
+  margin-top: 30px;
+  margin-right: 30px;
+  font-size: 0.8rem; 
+}
+/* termina new footer */
 @media (max-width:992px) {
     .centrado{
         margin-right: 13vw;
@@ -116,10 +212,54 @@ body {
 }
 
 @media (max-width:768px) {
+    /* header */
+    .contenedor01{
+        flex-direction: column;
+        justify-content:space-evenly;
+        align-content: center;
+        gap: 1.5em;
+        margin: 15px 0;
+        padding: 0.5em; 
+    }
+    .sub-boton{
+        color:#000000;
+        font-weight: 800;
+    }
+    .telefono{
+        font-size: 2em;
+    }
+    
+    .presentacion{
+        flex-direction: column;
+    }
+    /* termina el header */
     .centrado{
         margin-right: 10vw;
         margin-left: 10vw;
     }
+    /* new footer */
+    .mainFooter{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+  } 
+  .sectionThreeFooter{
+   justify-self: center;
+   
+   margin-top: 0;
+   margin-right: 0;
+   font-size: 0.8rem; 
+   }
+   .sectionOneFooter{
+   margin-left: 0px;
+   }
+   .mainFooter img {
+    width: 8vw;
+    height: 8vw;
+}
+  /* termina el footer */
 }
 
 @media (max-width:576px) {
