--- a/public/css/registroStyles.css
+++ b/public/css/registroStyles.css
@@ -1,18 +1,73 @@
 *{
     box-sizing: border-box;
 }
-.logoyotemudo{
-margin-left: 0;
-padding: 0;
+
+/* header */
+.contenedor01{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-content: space-around;
+    gap: 25px;
+    margin: 15px 0;
+    padding: 0 40px 40px 40px;
 }
+.presentacion{
+    display:flex;
+}
+
+.logo{
+    margin-left: 0;
+}
+.botones{
+    align-content: center;
+}
+.sub-boton{
+    position:relative;
+    padding:1em 1.5em;
+    border:none;
+    background-color:transparent;
+    cursor:pointer;
+    outline:0;
+    font-size:18px;
+    margin: .5em .8em;
+    font-weight: 600;
+}
+
+.sub-boton:after,
+.sub-boton:before{
+    content:"";
+    display:block;
+    position:absolute;
+    top:100%;
+    left:0;
+    width:100%;
+    height:2px;
+    background-color:#16a085;
+    transition:all .3s ease;
+    transform:scale(0.85)
+}
+.sub-boton:hover:before{
+    top:0;
+    transform:scale(1)
+}
+.sub-boton:hover:after{
+    transform:scale(1)
+}
+
+.telefono{
+   color: transparent;
+   align-self:center;
+}
+/* termina el header */
+
+
 body {
-    background:linear-gradient(to top,#88694D,transparent);
-    /* color: #fff; */
-    font-family: quicksand, sans-serif;
-    /* padding: 0 1.5em; */
+     background: url(../img/imagen-home.jpeg);
+     font-family: quicksand, sans-serif;
 }
 .content {
-    max-width: 1170px;
+    max-width: 75vw;
     margin-left: auto;
     margin-right: auto;
     padding: 0 1.5em 1.5em;    
@@ -25,6 +80,12 @@ body {
 .logo2 {
     color: #3C362A;
 }
+.formulario_de_contacto, .formulario_de_info{
+    box-shadow: 0 0 20px 0 rgb(255 255 255 / 30%);
+    background: rgba(0,0,0,.4);
+    padding: 1em;
+    color:antiquewhite;
+}
 .formulario_de_contacto {
     box-shadow: 0 0 20px 0 rgba(255,255,255, .3);
 }
@@ -34,10 +95,7 @@ body {
 .formulario_de_contacto {
     padding: 1em;
 }
-.formulario_de_contacto {
-    background: #88694D;
-    /* background: #3C362A; */
-}
+
 .formulario_de_contacto form {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -49,10 +107,7 @@ body {
     margin: 0;
     padding: 1em;
 }
-.formulario_de_info {
-    background: #857d6f;
- 
-}
+
 .formulario_de_info h4,
 .formulario_de_info ul,
 .formulario_de_info p {
@@ -105,11 +160,88 @@ background: #d63031;
   .rrss{
     display: flex;
   }    
+  /* botones */
+
+  .botones{
+    align-content: center;
+}
+.sub-boton{
+    position:relative;
+    padding:1em 1.5em;
+    border:none;
+    background-color:transparent;
+    cursor:pointer;
+    outline:0;
+    font-size:18px;
+    margin: .5em .8em;
+    font-weight: 600;
+}
+
+.sub-boton:after,
+.sub-boton:before{
+    content:"";
+    display:block;
+    position:absolute;
+    top:100%;
+    left:0;
+    width:100%;
+    height:2px;
+    background-color:#16a085;
+    transition:all .3s ease;
+    transform:scale(0.85)
+}
+.sub-boton:hover:before{
+    top:0;
+    transform:scale(1)
+}
+.sub-boton:hover:after{
+    transform:scale(1)
+}
+.presentacion{
+    display:flex;
+}
+
+.logo{
+    margin-left: 0;
+}
+/* new footer */
+.mainFooter{
+  display: grid;
+  margin: auto;
+  grid-template-columns: 48% 30% 20%;
+  grid-template-rows: 15vh;
+  padding-bottom: 20px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.9);
+  color:seashell;
+}
+.mainFooter img{
+  width: 3vw;
+  height: 3vw;
+}
+.sectionOneFooter{
+  margin-left: -100px;
+}
+.sectionTwoFooter{
+
+  display: flex;
+}
+.sectionThreeFooter{
+  justify-self: center;
+  
+  margin-top: 30px;
+  margin-right: 30px;
+  font-size: 0.8rem; 
+}
+/* termina new footer */
 /* Medias Query */
 @media (min-width: 700px) {
-    body {
+    /* header */
+   
+    /* termina el header */
+    /* body {
         padding: 0 4em;
-    }
+    } */
     .formulario_entero {
         display: grid;
         grid-template-columns: 2fr 1fr;
@@ -133,4 +265,49 @@ padding: 2em;
 .redesSocialesFooter{
     justify-content: center;
   }
+}
+@media (min-width:360px )and (max-width: 760px){
+    /* header */
+    .contenedor01{
+        flex-direction: column;
+        justify-content:space-evenly;
+        align-content: center;
+        gap: 1.5em;
+        margin: 15px 0;
+        padding: 0.5em; 
+    }
+    .sub-boton{
+        color:#000000;
+        font-weight: 800;
+    }
+    .telefono{
+        font-size: 2em;
+    }
+    
+    .presentacion{
+        flex-direction: column;
+    }
+    /* new footer */
+    .mainFooter{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+  } 
+  .sectionThreeFooter{
+   justify-self: center;
+   
+   margin-top: 0;
+   margin-right: 0;
+   font-size: 0.8rem; 
+   }
+   .sectionOneFooter{
+   margin-left: 0px;
+   }
+   .mainFooter img {
+    width: 8vw;
+    height: 8vw;
+}
+  /* termina el footer */
 }
