empiezo a corregir la vista de carrito para sumar el producto elegido

--- a/views/products/carrito.ejs
+++ b/views/products/carrito.ejs
@@ -19,6 +19,13 @@
                         <span class="icon"><img width="25" height="25" src='/img/hecho-garrapata.png'
                                 alt='Imagen de tilde'></img></span>
                     </button>
+                    <img src="/img/camiones/flota-00_2.jpg" alt="Camion Mudanza 1" class="imagenCamion">
+          <h3>PACK 1</h3>
+          <span>Radio 30km </span> <br>
+          <span>2,25 Mts2 </span> <br>
+          <span>$10.500 </span> <br>
+          <span>Medidas </span> <br>
+          <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>  
                 </a>
             </div>
             <div class="carrito-servicios">
