--- a/public/css/carritoStyles.css
+++ b/public/css/carritoStyles.css
@@ -104,9 +104,7 @@ body {
     text-decoration: none;
 }
 
-.carrito-tu-pack{
-    align-content: center;
-}
+
 .carrito-pack{
     position:relative;
     padding:1em 1.5em;
@@ -315,6 +313,20 @@ ul{
         margin:26.6px;
         width: auto;
     }
+    /* imagen parametrizada */
+    .carrito-tu-pack{
+        align-content: center;
+        text-align: center;
+        
+    }
+    .carrito-tu-pack img{
+        align-content: center;
+        font-size: 10px;
+    }
+    .btn-precio {
+        width: 5vw;
+        height: 5vw;
+    }
     
 }
 
@@ -337,6 +349,20 @@ ul{
     .carrito-volver {
         width:150%;
     }
+    /* imagen parametrizada */
+    .carrito-tu-pack{
+        align-content: center;
+        text-align: center;
+        
+    }
+    .carrito-tu-pack img{
+        align-content: center;
+        font-size: 10px;
+    }
+    .btn-precio {
+        width: 5vw;
+        height: 5vw;
+    }
 }
 @media (min-width: 360px) and (max-width: 700px){
     .contenedor01{
@@ -357,6 +383,21 @@ ul{
     
     .presentacion{
         flex-direction: column;
+    }
+
+    /* imagen parametrizada */
+    .carrito-tu-pack{
+        align-content: center;
+        text-align: center;
+        
+    }
+    .carrito-tu-pack img{
+        align-content: center;
+        font-size: 10px;
+    }
+    .btn-precio {
+        width: 5vw;
+        height: 5vw;
     }
     /* footer */
     .mainFooter{
