--- a/public/css/productoStyle.css
+++ b/public/css/productoStyle.css
@@ -2,6 +2,9 @@
 * {
     box-sizing: border-box;   
   }
+  body{
+    font-family: Montserrat-Light,quicksand, sans-serif;
+  }
   /* -------------------HEADER------------------ */
   .contenedor01{
     display: flex;
