subo proeycto terminado sprint 4

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <div class= "contenedor02">   
             <div class="conjunto">
                 <div class= "invitar">
-                    <h2 class= "frase-video">   PRUIEBA D ETITO </h2>
+                    <h2 class= "frase-video"> Te invitamos a ver nuestro video institucional </h2>
                 </div>
 
                 <div class= "video">
