--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
         </div>
         <div class="presentacion">
             <div class= "botones">
-                <a href"#" class="boton1">
+                <a href="/quienesSomos" class="boton1">
                     <button class= "sub-boton">QUIENES SOMOS 
                     </button>
                 </a>
