--- a/views/users/profileAdmin.ejs
+++ b/views/users/profileAdmin.ejs
@@ -66,7 +66,7 @@
                     <div class="profile_general_tools">
                         <div class="profile_center">
                             <!-- <form method="get" action=""> -->
-                                <a href="/products/edicionProducto">
+                                <a href="/products/producto">
                             <button type="submit" >EDITAR PACK</button></form>
                         </a>
                         </div>
@@ -75,17 +75,19 @@
                             <button type="submit">CREAR NUEVO PACK</button></a>
                         </div>
                         <div class="profile_center">
+                            <a href="/products/producto">
                             <button type="submit">ELIMINAR PACK</button>
+                        </a>
                         </div>
                         <div class="profile_center">
-                            <button type="submit">EDITAR USUARIO</button>
+                            <button type="submit">EDITAR "QUIENES SOMOS"</button>
                         </div>
-                        <div class="profile_center">
+                        <!-- <div class="profile_center">
                             <button type="submit">ELIMINAR USUARIO</button>
                         </div>                       
                         <div class="profile_center">
                             <button type="submit">EDITAR USUARIO</button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 
