--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -14,5 +14,6 @@
     <link rel="stylesheet" href="/css/carritoNormalize.css">
     <link rel="stylesheet" href="/css/loginStyles.css" />
     <link rel="stylesheet" href="/css/registroStyles.css">
+    <link rel="stylesheet" href="/css/quienesSomos.css">
 
 </head>
