--- a/views/products/producto.ejs
+++ b/views/products/producto.ejs
@@ -17,62 +17,89 @@
    
       <div class="cont-button">
         <div class="carrito-tu-pack">
-          <a href"#" class="botonPack">
+          <a href="#" class="botonPack">
             <button class="carrito-pack">Viajo Solo
               <span class="icon"></span>
             </button>
           </a>
         </div>
         <div class="carrito-tu-pack">
-          <a href"#" class="botonPack">
+          <a href="#" class="botonPack">
             <button class="carrito-pack">Comparto Viaje
               <span class="icon"></span>
             </button>
           </a>
         </div>
       </div>
-
+      
       <div class="packs">
-        <div class="packUnitario">
-          <img src="/img/camiones/flota-00_2.jpg" alt="Camion Mudanza 1" class="imagenCamion">
-          <h3>PACK 1</h3>
-          <span>Radio 30km </span> <br>
-          <span>2,25 Mts2 </span> <br>
-          <span>$10.500 </span> <br>
-          <span>Medidas </span> <br>
-          <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
-        </div>
+          <% for(let i = 0; i < products.length; i++) { %>
+            <div class="packUnitario">
+          
+              <img src="/img/camiones/<%= products[i].imagen %>" alt="Camion Mudanza 1" class="imagenCamion">
 
-        <div class="packUnitario">
-          <img src="/img/camiones/flota-01.jpg" alt="Camion Mudanza 2" class="imagenCamion" />
-          <h3>PACK 2</h3>
-          <span>Radio 30km </span> <br>
-          <span>4 Mts2 </span> <br>
-          <span>$15.000 </span> <br>
-          <span>Medidas </span> <br>
-          <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
+              <h3>Pack Nro.<%= products[i].numeroDePack %></h3>
+              <span><%= products[i].radio %>km </span> <br>
+              <span><%= products[i].superficie %> Mts2 </span> <br>
+              <span>$<%= products[i].precio %> </span> <br>
+              <span>Medidas </span> <br>
+              <div class="carrito-tu-pack"> 
+                  <button class="carrito-pack">
+                    <a href="/products/edicionProducto/<%= products[i].id %>">EDITAR</a>
+                  </button>
+                </a>
+              </div>
+              <div class="carrito-tu-pack">
+                <form action="/products/<%=products[i].id %>?_method=DELETE" method="POST" onsubmit="return confirm('Esta seguro que desea eliminarlo?');">
+                  <button class="carrito-pack"  type="submit" class="action-button delete">
+                    ELIMINAR
+                  </button>
+                </form>
+              </div>
+              <span><a href="/products/carrito/<%=products[i].id%>"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
+            </div>
+          <% } %>
 
-        </div>
-        <div class="packUnitario">
-          <img src="/img/camiones/flota-02.jpg" alt="Camion Mudanza 3" class="imagenCamion" />
-          <h3>PACK 3</h3>
-          <span>Radio 30km </span> <br>
-          <span>8,8 Mts2 </span> <br>
-          <span>$22.000 </span> <br>
-          <span>Medidas </span> <br>
-          <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
+        <!-- <div class="packs">
+          <div class="packUnitario">
+            <img src="/img/camiones/flota-00_2.jpg" alt="Camion Mudanza 1" class="imagenCamion">
+            <h3>PACK 1</h3>
+            <span>Radio 30km </span> <br>
+            <span>2,25 Mts2 </span> <br>
+            <span>$10.500 </span> <br>
+            <span>Medidas </span> <br>
+            <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
+          </div>
 
-        </div>
-        <div class="packUnitario">
-          <img src="/img/camiones/flota-04.jpg" alt="Camion Mudanza 4" class="imagenCamion" />
-          <h3>PACK 4</h3>
-          <span>Radio 30km </span> <br>
-          <span>12,25 Mts2 </span> <br>
-          <span>$25.000 </span> <br>
-          <span>Medidas </span> <br>
-          <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
+          <div class="packUnitario">
+            <img src="/img/camiones/flota-01.jpg" alt="Camion Mudanza 2" class="imagenCamion" />
+            <h3>PACK 2</h3>
+            <span>Radio 30km </span> <br>
+            <span>4 Mts2 </span> <br>
+            <span>$15.000 </span> <br>
+            <span>Medidas </span> <br>
+            <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
 
-        </div>
+          </div>
+          <div class="packUnitario">
+            <img src="/img/camiones/flota-02.jpg" alt="Camion Mudanza 3" class="imagenCamion" />
+            <h3>PACK 3</h3>
+            <span>Radio 30km </span> <br>
+            <span>8,8 Mts2 </span> <br>
+            <span>$22.000 </span> <br>
+            <span>Medidas </span> <br>
+            <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
+
+          </div>
+          <div class="packUnitario">
+            <img src="/img/camiones/flota-04.jpg" alt="Camion Mudanza 4" class="imagenCamion" />
+            <h3>PACK 4</h3>
+            <span>Radio 30km </span> <br>
+            <span>12,25 Mts2 </span> <br>
+            <span>$25.000 </span> <br>
+            <span>Medidas </span> <br>
+            <span><a href="/products/carrito"><img src="/img/carrito1.png" alt="" class="btn-precio "></a></span>
+          </div> -->
       </div> 
     </div>
   </main>
