--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -11,36 +11,38 @@
     <body class="background">
         <%- include('../partials/header') %> 
             <main>
-                <form>
+                <form  name = 'login' Action='login' method='POST' >
                     <div class="centrado">
                    
                         <div class="icono_login"> 
                             <img src="/img/user-solid.svg"> </img>
                         </div>
                         <h2 class="titulo_Ingreso"> INICIAR SESION </h2>
-                        <p> <label> 
-                            <input class= "formularios" type="text" name="nombreUsuario" placeholder="Usuario" size="35" maxlength="30" autofocus >
-                            </input> 
+                        <p> <label for='usuario'> 
+                                <input class= "formularios" type="text" name="usuario" id="usuario" placeholder="Usuario" 
+                                    size="35" maxlength="30" autofocus >
+                                </input> 
                             </label> 
                         </p>
-                        <p> <label> 
-                            <input class= "formularios"type="password" name="claveUsuario" placeholder="Contraseña" size="35" maxlength="30" > 
-                            </input>
+                        <p> <label for='claveUsuario'> 
+                                <input class= "formularios"type="password" name="claveUsuario" id="claveUsuario"
+                                    placeholder="Contraseña" size="35" maxlength="30" > 
+                                </input>
                             </label> 
                         </p>
                         <!--<input type="submit" value="Reestablecer contraseña / Registrarse" style="vertical-align: middle"> -->
                         
                         <div>
-                            <button class="carrito-volver">  
-                                <a href="profileAdmin" class="boton_confirmar">
+                            <button class="carrito-volver" type="submit">
+                                <!--<a href="/login" class="boton_confirmar"> -->
                                     <img src="/img/send.svg" alt="Icono de Ingreso" width="20" height="20" style="vertical-align: middle"> 
-                                CONFIRMAR 
+                                    CONFIRMAR 
                                 </a>
                             </button>
                         </div>
                         <br>
                         <div class="otros-accesos">
-                            <a href="profileUser">Olvide mi contraseña</a>  |  
+                            <a href='./users/profileAdmin'>Olvide mi contraseña</a>  |  
                             <a href="#">Crear cuenta</a>
                         </div>
                     </div>
