--- a/public/css/registroStyles.css
+++ b/public/css/registroStyles.css
@@ -16,6 +16,19 @@
     display:flex;
 }
 
+.classeError{
+    color: crimson;
+    font-size:14px;
+    font-style: italic;
+    font-weight: 600;
+    margin-top: 0px;
+    margin-bottom: 15px;
+    padding: 0%;
+}
+.cajaDato{
+    margin-top: 15px;
+    margin-right: 10%;
+}
 .logo{
     margin-left: 0;
 }
@@ -70,7 +83,7 @@ body {
     max-width: 75vw;
     margin-left: auto;
     margin-right: auto;
-    padding: 0 1.5em 1.5em;    
+    padding: 0 1.5em 1.5em;
 }
 .logo {
     text-align: center;
@@ -80,30 +93,41 @@ body {
 .logo2 {
     color: #3C362A;
 }
-.formulario_de_contacto, .formulario_de_info{
+
+.datos{
+    display: flexbox;
+}
+.classDato{
+    margin-top: 2px;
+}
+.datos_de_contacto{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.formulario_de_contacto_gral, .formulario_de_info{
     box-shadow: 0 0 20px 0 rgb(255 255 255 / 30%);
     background: rgba(0,0,0,.4);
     padding: 1em;
     color:antiquewhite;
 }
-.formulario_de_contacto {
+.formulario_de_contacto_gral {
     box-shadow: 0 0 20px 0 rgba(255,255,255, .3);
-}
-.formulario_de_contacto h1 {
-    text-align: center;
-}
-.formulario_de_contacto {
     padding: 1em;
 }
 
-.formulario_de_contacto form {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.formulario_de_contacto_gral h1 {
+    text-align: center;
 }
-.formulario_de_contacto form .block {
+
+.formulario_de_contacto_gral form {
+    display: flex;
+   /* grid-template-columns: 1fr 1fr;*/
+}
+.formulario_de_contacto_gral form .block {
     grid-column: 1 / 3;
 }
-.formulario_de_contacto form  p {
+.formulario_de_contacto_gral form  p {
     margin: 0;
     padding: 1em;
 }
@@ -122,19 +146,21 @@ body {
 .formulario_de_info ul li {
         padding: .3em;
 }
-.formulario_de_contacto form button,
-.formulario_de_contacto form input,
-.formulario_de_contacto textarea {
-        width: 100%;
+.formulario_de_contact_gral form button,
+.formulario_de_contacto_gral form input,
+.formulario_de_contacto_gral textarea {
+        width: 80%;
         padding: .6em;
+        margin-bottom: 0.2em;
         border: none;
         background: none;
         outline: none;
         color: #fff;
         border-bottom: 1px solid #3C362A;
 }
-.formulario_de_contacto form button {
-    width: 200%;
+.formulario_de_contacto_gral form button {
+    margin-top: 15px;
+    width: 100%;
     background: #3C362A;
     border: 0;
     color: #000;
@@ -142,11 +168,11 @@ body {
     padding: 1em;
     transition: background-color 16s ease-out;
 }
-.formulario_de_contacto form button:hover,
-.formulario_de_contacto form button:focus {
+.formulario_de_contacto_gral form button:hover,
+.formulario_de_contacto_gral form button:focus {
 background: #d63031;
  color: #fff; 
-}   
+}    
 .footer img{
     width: 35px;
     height: 30px;
