--- a/views/users/registro.ejs
+++ b/views/users/registro.ejs
@@ -32,9 +32,9 @@
             <h2 class="logo">Solicitud de <span class="logo2"> Registro </span></h2>
         <div class="formulario_entero">
             <div class="formulario_de_contacto_gral">
-                <h1> Datos de usuario </h1> 
+                <h1> Datos de usuario </h1>     
                    
-                <form action="/registro" method='POST' enctype="multipart/form-data">
+                <form action="/users/registro" method='POST' enctype="multipart/form-data">
                     <div class="datos">
                         <div class="datos_de_contacto">
                             <div class="cajaDato">
