--- a/views/users/profileUser.ejs
+++ b/views/users/profileUser.ejs
@@ -24,43 +24,43 @@
         <main class="profile_main">
             <div class="profile_container">
                 <div class="profile_title">
-                    <h2 class="profile_logo">Perfil de <span class="profile_logo2"> Usuario </span></h2>
+                    <h2 class="profile_logo">Perfil de <span class="profile_logo2"> <%= user.nombre %> </span></h2>
                 </div> 
                 <div class="profile_box">
                     <div class="profile_center_logo">
-                        <img class="profile_icono_login" src="/img/user-solid.svg"> </img>    
+                        <img class="profile_icono_login" src="/img/img_users/<%=user.imagen %> "> </img>    
                         <h1> Datos del Usuario </h1>
                     </div>
                                     
                     <div class="profile_datos">
                         <div class="profile_group_info">
                             <p > Nombre: </p>
-                            <p class="profile_info"> Pedro </p>
+                            <p class="profile_info"> <%=user.nombre%> </p>
                         </div>
 
                         <div class="profile_group_info">
                             <p > Apellido: </p>
-                            <p class="profile_info"> Perez </p>
+                            <p class="profile_info"> <%=user.apellido %> </p>
                         </div>
                         
                         <div class="profile_group_info">
                             <p> Domicilio: </p>
-                            <p class="profile_info"> Av. Monroe 800 </p>
+                            <p class="profile_info"> <%=user.domicilio %> </p>
                         </div>
 
                         <div class="profile_group_info">
                             <p> Localidad: </p>
-                            <p class="profile_info"> C.A.B.A. </p>
+                            <p class="profile_info"> <%=user.localidad %> </p>
                         </div>
 
                         <div class="profile_group_info">
                             <p> E-mail: </p>
-                            <p class="profile_info"> p.perez@gmail.com </p>
+                            <p class="profile_info"> <%=user.email %> </p>
                         </div>
 
                         <div class="profile_group_info">
                             <p> Teléfono: </p>
-                            <p class="profile_info"> (+54 9 11) 70665555 </p>
+                            <p class="profile_info"> <%=user.telefono %> </p>
                         </div>
 
                         <div class="profile_group_info">
