--- a/views/users/profileAdmin.ejs
+++ b/views/users/profileAdmin.ejs
@@ -27,7 +27,7 @@
                 </div> 
                 <div class="profile_box">
                     <div class="profile_center_logo">
-                        <img class="profile_icono_login" src="img/user-solid.svg"> </img>    
+                        <img class="profile_icono_login" src="/img/img_users/<%=user.imagen %> "> </img>    
                         <h1> Datos del Administrador </h1>
                     </div>
                                 
