--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -44,8 +44,8 @@
                         </div>
                         <br>
                         <div class="otros-accesos">
-                            <a href='./users/profileAdmin'>Olvide mi contraseña</a>  |  
-                            <a href="#">Crear cuenta</a>
+                            <a href='#'>Olvide mi contraseña</a>  |  
+                            <a href="registro">Crear cuenta</a>
                         </div>
                     </div>
                 </form>
